test/zinc_source/compile_errors/error_handling/06_reserved_builtin_name.zn
// expected-error: syntax error\(s\) while parsing
fn Ok() {
    print(1)
}
